--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 certifi==2020.6.20
 chardet==3.0.4
+docutils==0.16
 idna==2.10
+lockfile==0.12.2
 pkg-resources==0.0.0
+python-daemon==2.2.4
 requests==2.24.0
 RPi.GPIO==0.7.0
 urllib3==1.25.10
