--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
+---
 boilr:
   interval: 10 # check api every x seconds
-  start_timeout: 2 # min time between switching off and on again in minutes
+  start_timeout: 120 # min time between contactor state change in seconds
 
   moving_median_list_size: 5 # size of the array for past request values
   charge_threshold: 85 # min battery state of charge in %
   ppv_tolerance: 100 # tolerance pv production in W
-
   heater_power: 2600 # power of the heating element in W (power availability) (2550W in datasheet)
 
   active_date_range: ["01-01", "31-12"] # may - oct (day-month) ([start, end])
@@ -17,7 +17,7 @@ rpi:
 
 endpoint:
   request_timeout: 5 # timeout for requests in seconds
-  scheme: "http://"
+  scheme: "http://" # scheme
   ip: "10.0.10.90" # ip address of the inverter
   api: "/solar_api/v1" # api version (inverter specific; check with this URI: http://<ip-address>/solar_api/GetAPIVersion.cgi)
   powerflow: "/GetPowerFlowRealtimeData.fcgi" # resource
