--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     build: .
     volumes:
       - ./config.yaml:/config.yaml
+    devices:
+      - /dev/gpiomem:/dev/gpiomem
     restart: unless-stopped
     privileged: true
     networks:
