--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ boilr:
   moving_median_list_size: 5 # size of the array for past request values
   charge_threshold: 85 # min battery state of charge in %
   ppv_tolerance: 100 # tolerance pv production in W
-  heater_power: 2600 # power of the heating element in W (power availability) (2550W in datasheet)
+  heater_power: 2600 # max power of the heating element in W (power availability) (2550W in datasheet)
 
   active_date_range: ["01-01", "31-12"] # may - oct (day-month) ([start, end])
   active_time_range: ["00:00", "23:59"] # after charging the battery; before discharging the battery (hour:minute) 10:00 - 17:00 ([start, end])
