retries for request optimised median with queues

--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,7 @@ rpi:
 
 endpoint:
   request_timeout: 5 # timeout for requests in seconds
+  max_retries: 3 # maximum retries for requests
   scheme: "http://" # scheme
   ip: "10.0.10.90" # ip address of the inverter
   api: "/solar_api/v1" # api version (inverter specific; check with this URI: http://<ip-address>/solar_api/GetAPIVersion.cgi)
