--- a/config.yaml
+++ b/config.yaml
@@ -6,10 +6,11 @@ boilr:
   moving_median_list_size: 5 # size of the array for past request values
   charge_threshold: 85 # min battery state of charge in %
   ppv_tolerance: 100 # tolerance pv production in W
-  heater_power: 2600 # max power of the heating element in W (power availability) (2550W in datasheet)
+  heater_power: 2600 # max power of the heating element in W (for power availability calculation)
 
   active_date_range: ["01-01", "31-12"] # may - oct (day-month) ([start, end])
-  active_time_range: ["00:00", "23:59"] # after charging the battery; before discharging the battery (hour:minute) 10:00 - 17:00 ([start, end])
+  active_time_range: ["00:00", "23:59"] # after charge_threshold & before discharging the battery
+    # e.g.: 10:00 - 17:00 ([start, end]) (hour:minute)
 
 rpi:
   rpi_channel_relay_out: 17 # board number 11
@@ -20,5 +21,6 @@ endpoint:
   max_retries: 3 # maximum retries for requests
   scheme: "http://" # scheme
   ip: "10.0.10.90" # ip address of the inverter
-  api: "/solar_api/v1" # api version (inverter specific; check with this URI: http://<ip-address>/solar_api/GetAPIVersion.cgi)
+  api: "/solar_api/v1" # api version (inverter specific)
+    # check with this URI: http://<ip-address>/solar_api/GetAPIVersion.cgi
   powerflow: "/GetPowerFlowRealtimeData.fcgi" # resource
