--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 certifi==2024.8.30
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 docutils==0.21.2
-idna==3.7
+idna==3.10
 lockfile==0.12.2
+paho-mqtt==2.1.0
 python-daemon==3.0.1
-PyYAML==6.0.1
+PyYAML==6.0.2
 requests==2.32.3
 RPi.GPIO==0.7.1
 urllib3==2.2.3
