--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,python,visualstudiocode,git
 
 venv
+_version.py
